server/k8s/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
  name: socialcoin-api
spec:
  rules:
  - host: api.socialcoin.${subdomain}.deusto.apps.deustotech.eu
    http:
      paths:
      - backend:
          service:
            name: socialcoin-api-app
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.socialcoin.${subdomain}.deusto.apps.deustotech.eu
    secretName: socialcoin-api-app-cert
